<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".Register">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            app:srcCompat="@drawable/cbn"
            android:contentDescription="@string/cbnlogo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/verification"
            android:textColor="#212121"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/the_collected_information_willl_be_stored_anonymously"
            android:gravity="center"
            android:textSize="14sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/enter_your_mobile_number"
            android:gravity="center"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_height="40dp"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:text="@string/_91"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/inputMobile"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:hint="@string/_9876543210"
                android:background="@null"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textSize="20sp"
                android:textStyle="bold"
                />
        </LinearLayout>
        <View
            android:layout_height="2dp"
            android:layout_width="match_parent"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginTop="9dp"
            android:background="@color/black" />
        <FrameLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <Button
                android:id="@+id/getOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:background="@drawable/background_button"
                android:text="@string/get_otp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone" />
        </FrameLayout>
    </LinearLayout>
</ScrollView>