<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".complaint">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:padding="5dp"
                android:text="@string/complaint_details" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/enter_suspect_name"
                android:padding="5dp"
                android:textColorHint="@color/purple_500"
                app:hintTextColor="@color/purple_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TIETsname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColor="@color/purple_500"
                    android:textColorHint="@color/purple_500"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/sus_desc"
                android:padding="5dp"
                android:textColorHint="@color/purple_500"
                app:hintTextColor="@color/purple_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TIETsapp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColor="@color/purple_500"
                    android:textColorHint="@color/purple_500"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TIL1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/select"
                android:padding="5dp"
                android:textColorHint="@color/purple_500"
                app:hintTextColor="@color/purple_500">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:dropDownHeight="200dp"
                    android:inputType="none"
                    android:textColor="@color/purple_500"
                    android:textColorHint="@color/purple_500"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/place_of_occurence"
                android:padding="5dp"
                android:textColorHint="@color/purple_500"
                app:hintTextColor="@color/purple_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TIETsplace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPostalAddress"
                    android:textColor="@color/purple_500"
                    android:textColorHint="@color/purple_500"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/smap"
                android:padding="5dp"
                android:textColorHint="@color/purple_500"
                app:hintTextColor="@color/purple_500">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/mark_the_exact_location"
                    android:textColor="@color/purple_500"
                    android:textSize="14sp" />

                <fragment
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:layout_margin="5dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/zoomOUT"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/zoomout"
                            tools:ignore="ObsoleteLayoutParam" />

                        <Button
                            android:id="@+id/zoomIN"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/zoomin"
                            tools:ignore="ObsoleteLayoutParam" />
                    </LinearLayout>
                </fragment>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TIL1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/state"
                android:padding="5dp"
                android:textColorHint="@color/purple_500"
                app:hintTextColor="@color/purple_500">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTV1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:dropDownHeight="200dp"
                    android:inputType="none"
                    android:textColor="@color/purple_500"
                    android:textColorHint="@color/purple_500"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/date_of_occurence"
                android:padding="5dp"
                android:textColorHint="@color/purple_500"
                app:hintTextColor="@color/purple_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TIETsdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:textColor="@color/purple_500"
                    android:textColorHint="@color/purple_500"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/TIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/time_of_occurence"
                android:padding="5dp"
                android:textColorHint="@color/purple_500"
                app:hintTextColor="@color/purple_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TIETstime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:textColor="@color/purple_500"
                    android:textColorHint="@color/purple_500"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/TIL"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/Details"
                android:padding="5dp"
                android:textColorHint="@color/purple_500"
                app:hintTextColor="@color/purple_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TIETsdetails"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:gravity="start|top"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:textColor="@color/purple_500"
                    android:textColorHint="@color/purple_500"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                android:textColorHint="@color/purple_500"
                app:hintTextColor="@color/purple_500">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/do_you_have_any_proof"
                    android:textColor="@color/purple_500"
                    android:textSize="14sp" />

                <RadioGroup
                    android:id="@+id/RG"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/TIETsradio"
                        android:layout_width="96dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:importantForAutofill="no"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/yes"
                        android:textColor="@color/purple_500"
                        android:textColorHint="@color/purple_500"
                        android:textSize="14dp" />


                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/TIETsradio1"
                        android:layout_width="96dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:importantForAutofill="no"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/no"
                        android:textColor="@color/purple_500"
                        android:textColorHint="@color/purple_500"
                        android:textSize="14dp" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Uimg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                android:textColorHint="@color/purple_500"
                android:visibility="gone"
                app:hintTextColor="@color/purple_500">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="Choose Image"
                    android:textColor="@color/purple_500"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/Ubtn"
                    android:layout_width="100dp"
                    android:layout_height="44dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:text="Choose"></Button>

                <TextView
                    android:id="@+id/Ufilename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:hint="File name"
                    android:singleLine="true"
                    android:textSize="14sp" />


            </LinearLayout>



            <Button
                android:id="@+id/submitBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/submit">

            </Button>


        </LinearLayout>
    </RelativeLayout>
</ScrollView>


