<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    android:scrollbars="none"
    android:overScrollMode="never"
    tools:context=".Verify">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/cbn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/verification"
            android:textColor="#212121"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/enter_the_otp_sent_to"
            android:gravity="center"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/textmobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:textSize="14sp"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input1"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="LabelFor,TextViewEdits"/>
            <EditText
                android:id="@+id/input2"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="LabelFor,TextViewEdits"/>
            <EditText
                android:id="@+id/input3"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="LabelFor,TextViewEdits"/>
            <EditText
                android:id="@+id/input4"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="LabelFor,TextViewEdits"/>
            <EditText
                android:id="@+id/input5"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="LabelFor,TextViewEdits"/>
            <EditText
                android:id="@+id/input6"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="LabelFor,TextViewEdits"/>

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/didn_t_receive_the_otp"
                tools:ignore="HardcodedText"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/resendOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/resend_otp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/design_default_color_primary"/>
        </LinearLayout>

        <FrameLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <Button
                android:id="@+id/verifyOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:background="@drawable/background_button"
                android:text="@string/verify_otp"
                android:textStyle="bold" />
            <ProgressBar
                android:id="@+id/VerifyProgressBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone"/>
        </FrameLayout>
    </LinearLayout>

</ScrollView>